--- a/index.html
+++ b/index.html
@@ -16,16 +16,6 @@ developed, complex and powerful gaming experience.
 
 This standard form is called TORUS and this iteration is meant to be it!
 
-To do list:
-
-a . Refresh bug ?
-b . Take and place the ball
-c . Shoot and pass the ball
-d . Goal
-e . Move limit
-f . End
-g . Intro
-
 -->
 <head>
   <meta charset='UTF-8'>
@@ -598,7 +588,15 @@ BODY
 SCRIPTS
 -->
 <script>
-  const Ω = { _: {} } // '_' houses disposable data
+
+  //============================================================================
+  // OMEGA
+  //
+  const Ω =
+  {
+    _: {} // houses disposable data
+  }
+
 </script>
 
 <script type='text/javascript' src='vPage.js'></script>
