--- a/index.html
+++ b/index.html
@@ -588,15 +588,7 @@ BODY
 SCRIPTS
 -->
 <script>
-
-  //============================================================================
-  // OMEGA
-  //
-  const Ω =
-  {
-    _: {} // houses disposable data
-  }
-
+  const Ω = {} // Omega is the only global
 </script>
 
 <script type='text/javascript' src='vPage.js'></script>
