--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@ BODY
 <body class='wfl hfl m00 cnt' oncontextmenu='return false'>
 
   <!--==========================================================================
-  ARENA
+  ARENA'S START
   -->
   <div id='arena' class='brd'>
 
-    <!--========================================================================
+    <!--........................................................................
     ARENA CELLS
     -->
     <div id='A00' class='cll flt cnt drd brd ssns'>A 00</div>
@@ -321,12 +321,12 @@ BODY
     <div id='L18' class='cll flt cnt lrd brd nsss'>L 18</div>
     <div id='L19' class='cll flt cnt drd brd nsss'>L 19</div>
 
-    <!--========================================================================
+    <!--........................................................................
     CENTER MARK
     -->
     <div id='center' class='cll gol abs rnd'></div>
 
-    <!--========================================================================
+    <!--........................................................................
     BENCH
     -->
     <div id='space1' class='wfl flt spc'></div>
@@ -352,12 +352,12 @@ BODY
     <div id='M18' class='cll flt cnt bnc brd rnd'></div>
     <div id='M19' class='cll flt cnt bnc brd rnd'></div>
 
-    <!--========================================================================
+    <!--........................................................................
     BALL
     -->
     <div id='ball' class='abs stn bal rnd ani1'></div>
 
-    <!--========================================================================
+    <!--........................................................................
     ATHLETES
     -->
     <div id='T00' class='abs stn rnd ani1'>
@@ -540,7 +540,7 @@ BODY
       </svg>
     </div>
 
-    <!--========================================================================
+    <!--........................................................................
     ZONES
     -->
     <div id='zon00' class='abs zon rnd ani2'></div>
@@ -563,7 +563,7 @@ BODY
     <div id='zon14' class='abs zon rnd ani2'></div>
     <div id='zon15' class='abs zon rnd ani2'></div>
 
-    <!--========================================================================
+    <!--........................................................................
     CONSOLE
     -->
     <div id='space2' class='wfl flt spc'></div>
@@ -575,12 +575,15 @@ BODY
     <div id='reset' class='w25 box flt cnt brd btn'>RESET</div>
     <div id='no' class='yon box flt cnt brd btn'>N</div>
 
-    <!--========================================================================
+    <!--........................................................................
     SELECTED
     -->
     <div id='selection' class='abs zon rnd'></div>
 
-  </div> <!-- arena's end -->
+  <!--==========================================================================
+  ARENA'S FINISH
+  -->
+  </div>
 
 </body>
 
