--- a/index.html
+++ b/index.html
@@ -594,10 +594,11 @@ SCRIPTS
   const Ω = {} // Omega is the only global
 </script>
 
-<script type='text/javascript' src='vPage.js'></script>
+<script type='text/javascript' src='uPage.js'></script>
+<script type='text/javascript' src='vData.js'></script>
 <script type='text/javascript' src='wTool.js'></script>
-<script type='text/javascript' src='xData.js'></script>
-<script type='text/javascript' src='yLstn.js'></script>
+<script type='text/javascript' src='xLstn.js'></script>
+<script type='text/javascript' src='yZone.js'></script>
 <script type='text/javascript' src='zMain.js'></script>
 
 </html>
