HTML fixed and Keeper working

--- a/index.html
+++ b/index.html
@@ -594,10 +594,11 @@ SCRIPTS
   const Ω = {} // Omega is the only global
 </script>
 
-<script type='text/javascript' src='uPage.js'></script>
-<script type='text/javascript' src='vData.js'></script>
-<script type='text/javascript' src='wTool.js'></script>
-<script type='text/javascript' src='xLstn.js'></script>
+<script type='text/javascript' src='tPage.js'></script>
+<script type='text/javascript' src='uData.js'></script>
+<script type='text/javascript' src='vTool.js'></script>
+<script type='text/javascript' src='wClic.js'></script>
+<script type='text/javascript' src='xHove.js'></script>
 <script type='text/javascript' src='yZone.js'></script>
 <script type='text/javascript' src='zMain.js'></script>
 
