--- a/index.html
+++ b/index.html
@@ -578,7 +578,12 @@ BODY
     <!--........................................................................
     SELECTED
     -->
-    <div id='selection' class='abs zon rnd'></div>
+    <div id='selection' class='abs r42 rnd'></div>
+
+    <!--........................................................................
+    SHOOT
+    -->
+    <div id='shoot' class='cnt abs r42 rnd'> SHOOT </div>
 
   <!--==========================================================================
   ARENA'S FINISH
