Further working on shooting

--- a/index.html
+++ b/index.html
@@ -578,12 +578,18 @@ BODY
     <!--........................................................................
     SELECTED
     -->
-    <div id='selection' class='abs r42 rnd'></div>
+    <div id='selection' class='abs zon rnd'></div>
 
     <!--........................................................................
     SHOOT
     -->
-    <div id='shoot' class='cnt abs r42 rnd'> SHOOT </div>
+    <div id='shoot0' class='cnt abs rnd sho sh0'>
+      <div id='shoot1' class='cnt rnd sho sh1'>
+        <div id='shoot2' class='cnt rnd sho sh2'>
+          <div id='shoot3' class='cnt rnd sho sh3'></div>
+        </div>
+      </div>
+    </div>
 
   <!--==========================================================================
   ARENA'S FINISH
