--- a/index.html
+++ b/index.html
@@ -580,6 +580,17 @@ BODY
     -->
     <div id='selection' class='abs zon rnd'></div>
 
+    <!--........................................................................
+    SHOOT
+    -->
+    <div id='shoot0' class='cnt rnd sho sh0 abs'>
+      <div id='shoot1' class='cnt rnd sho sh1'>
+        <div id='shoot2' class='cnt rnd sho sh2'>
+          <div id='shoot3' class='cnt rnd sho sh3'></div>
+        </div>
+      </div>
+    </div>
+
   <!--==========================================================================
   ARENA'S FINISH
   -->
