--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@ BODY
     <!--........................................................................
     SHOOT
     -->
-    <div id='shoot0' class='cnt rnd sho sh0 abs'>
+    <div id='shoot0' class='cnt rnd sho sh0 abs ani1'>
       <div id='shoot1' class='cnt rnd sho sh1'>
         <div id='shoot2' class='cnt rnd sho sh2'>
           <div id='shoot3' class='cnt rnd sho sh3'></div>
