ENH: Shoot has begun + minor improvements

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ BODY
     </div>
 
     <div id='D00' class='cll flt cnt lgr brd nnns arg'>
-      <div id='golGre2' class='cnt gol rnd sc1 txg'> D 00 </div>
+      <div id='golGre2' class='cnt gol rnd txg'> D 00 </div>
     </div>
     <div id='D01' class='cll flt cnt dgr txg arg'> D 01 </div>
     <div id='D02' class='cll flt cnt lgr brd ssnn txg arg'> D 02 </div>
@@ -130,7 +130,7 @@ BODY
     </div>
 
     <div id='E00' class='cll flt cnt dgr brd nnns arg'>
-      <div id='golGre3' class='cnt gol rnd sc1 txg'> E 00 </div>
+      <div id='golGre3' class='cnt gol rnd txg'> E 00 </div>
     </div>
     <div id='E01' class='cll flt cnt lgr txg arg'> E 01 </div>
     <div id='E02' class='cll flt cnt dgr txg arg'> E 02 </div>
@@ -155,7 +155,7 @@ BODY
     </div>
 
     <div id='F00' class='cll flt cnt lgr brd nnns arg'>
-      <div id='golGre4' class='cnt gol rnd sc1 txg'> F 00 </div>
+      <div id='golGre4' class='cnt gol rnd txg'> F 00 </div>
     </div>
     <div id='F01' class='cll flt cnt dgr txg arg'> F 01 </div>
     <div id='F02' class='cll flt cnt lgr txg arg'> F 02 </div>
@@ -180,7 +180,7 @@ BODY
     </div>
 
     <div id='G00' class='cll flt cnt dgr brd nnns arg'>
-      <div id='golGre5' class='cnt gol rnd sc1 txg'> G 00 </div>
+      <div id='golGre5' class='cnt gol rnd txg'> G 00 </div>
     </div>
     <div id='G01' class='cll flt cnt lgr txg arg'> G 01 </div>
     <div id='G02' class='cll flt cnt dgr txg arg'> G 02 </div>
@@ -205,7 +205,7 @@ BODY
     </div>
 
     <div id='H00' class='cll flt cnt lgr brd nnns arg'>
-      <div id='golGre6' class='cnt gol rnd sc1 txg'> H 00 </div>
+      <div id='golGre6' class='cnt gol rnd txg'> H 00 </div>
     </div>
     <div id='H01' class='cll flt cnt dgr txg arg'> H 01 </div>
     <div id='H02' class='cll flt cnt lgr txg arg'> H 02 </div>
@@ -230,7 +230,7 @@ BODY
     </div>
 
     <div id='I00' class='cll flt cnt dgr brd nnns arg'>
-      <div id='golGre7' class='cnt gol rnd sc1 txg'> I 00 </div>
+      <div id='golGre7' class='cnt gol rnd txg'> I 00 </div>
     </div>
     <div id='I01' class='cll flt cnt lgr txg arg'> I 01 </div>
     <div id='I02' class='cll flt cnt dgr brd nssn txg arg'> I 02 </div>
@@ -255,7 +255,7 @@ BODY
     </div>
 
     <div id='J00' class='cll flt cnt lgr brd nnss arg'>
-      <div id='golGre8' class='cnt gol rnd sc1 txg'> J 00 </div>
+      <div id='golGre8' class='cnt gol rnd txg'> J 00 </div>
     </div>
     <div id='J01' class='cll flt cnt dgr brd nssn txg arg'> J 01 </div>
     <div id='J02' class='cll flt cnt lrd brd snss'> J 02 </div>
