ENH: May now shoot goals + minor fixes

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ BODY
     <div id='B18' class='cll flt cnt lrd brd nsss'> B 18 </div>
     <div id='B19' class='cll flt cnt drd brd nsss'> B 19 </div>
 
-    <div id='C00' class='cll flt cnt dgr brd snns arg'>
+    <div id='C00' class='cll flt cnt dgr brd snns arg exc1'>
       <div id='golGre1' class='cnt gol rnd txg'> C 00 </div>
     </div>
     <div id='C01' class='cll flt cnt lgr brd ssnn txg arg'> C 01 </div>
@@ -100,7 +100,7 @@ BODY
     <div id='C16' class='cll flt cnt drd brd snnn'> C 16 </div>
     <div id='C17' class='cll flt cnt lrd brd sssn'> C 17 </div>
     <div id='C18' class='cll flt cnt dbl brd snns txb arb'> C 18 </div>
-    <div id='C19' class='cll flt cnt lbl brd ssnn arb'>
+    <div id='C19' class='cll flt cnt lbl brd ssnn arb exc1'>
       <div id='golBlu1' class='cnt gol rnd txb'> C 19 </div>
     </div>
 
@@ -125,7 +125,7 @@ BODY
     <div id='D16' class='cll flt cnt lrd brd nssn'> D 16 </div>
     <div id='D17' class='cll flt cnt dbl brd snns txb arb'> D 17 </div>
     <div id='D18' class='cll flt cnt lbl txb arb'> D 18 </div>
-    <div id='D19' class='cll flt cnt dbl brd nsnn arb'>
+    <div id='D19' class='cll flt cnt dbl brd nsnn arb exc3'>
       <div id='golBlu2' class='cnt gol rnd txb'> D 19 </div>
     </div>
 
@@ -150,7 +150,7 @@ BODY
     <div id='E16' class='cll flt cnt dbl brd snns txb arb'> E 16 </div>
     <div id='E17' class='cll flt cnt lbl txb arb'> E 17 </div>
     <div id='E18' class='cll flt cnt dbl txb arb'> E 18 </div>
-    <div id='E19' class='cll flt cnt lbl brd nsnn arb'>
+    <div id='E19' class='cll flt cnt lbl brd nsnn arb exc3'>
       <div id='golBlu3' class='cnt gol rnd txb'> E 19 </div>
     </div>
 
@@ -175,7 +175,7 @@ BODY
     <div id='F16' class='cll flt cnt lbl brd nnns txb arb'> F 16 </div>
     <div id='F17' class='cll flt cnt dbl txb arb'> F 17 </div>
     <div id='F18' class='cll flt cnt lbl txb arb'> F 18 </div>
-    <div id='F19' class='cll flt cnt dbl brd nsnn arb'>
+    <div id='F19' class='cll flt cnt dbl brd nsnn arb exc3'>
       <div id='golBlu4' class='cnt gol rnd txb'> F 19 </div>
     </div>
 
@@ -200,7 +200,7 @@ BODY
     <div id='G16' class='cll flt cnt dbl brd nnns txb arb'> G 16 </div>
     <div id='G17' class='cll flt cnt lbl txb arb'> G 17 </div>
     <div id='G18' class='cll flt cnt dbl txb arb'> G 18 </div>
-    <div id='G19' class='cll flt cnt lbl brd nsnn arb'>
+    <div id='G19' class='cll flt cnt lbl brd nsnn arb exc3'>
       <div id='golBlu5' class='cnt gol rnd txb'> G 19 </div>
     </div>
 
@@ -225,7 +225,7 @@ BODY
     <div id='H16' class='cll flt cnt lbl brd nnss txb arb'> H 16 </div>
     <div id='H17' class='cll flt cnt dbl txb arb'> H 17 </div>
     <div id='H18' class='cll flt cnt lbl txb arb'> H 18 </div>
-    <div id='H19' class='cll flt cnt dbl brd nsnn arb'>
+    <div id='H19' class='cll flt cnt dbl brd nsnn arb exc3'>
       <div id='golBlu6' class='cnt gol rnd txb'> H 19 </div>
     </div>
 
@@ -250,11 +250,11 @@ BODY
     <div id='I16' class='cll flt cnt drd brd ssnn'> I 16 </div>
     <div id='I17' class='cll flt cnt lbl brd nnss txb arb'> I 17 </div>
     <div id='I18' class='cll flt cnt dbl txb arb'> I 18 </div>
-    <div id='I19' class='cll flt cnt lbl brd nsnn arb'>
+    <div id='I19' class='cll flt cnt lbl brd nsnn arb exc3'>
       <div id='golBlu7' class='cnt gol rnd txb'> I 19 </div>
     </div>
 
-    <div id='J00' class='cll flt cnt lgr brd nnss arg'>
+    <div id='J00' class='cll flt cnt lgr brd nnss arg exc2'>
       <div id='golGre8' class='cnt gol rnd txg'> J 00 </div>
     </div>
     <div id='J01' class='cll flt cnt dgr brd nssn txg arg'> J 01 </div>
@@ -275,7 +275,7 @@ BODY
     <div id='J16' class='cll flt cnt lrd brd nnsn'> J 16 </div>
     <div id='J17' class='cll flt cnt drd brd sssn'> J 17 </div>
     <div id='J18' class='cll flt cnt lbl brd nnss txb arb'> J 18 </div>
-    <div id='J19' class='cll flt cnt dbl brd nssn arb'>
+    <div id='J19' class='cll flt cnt dbl brd nssn arb exc1'>
       <div id='golBlu8' class='cnt gol rnd txb'> J 19 </div>
     </div>
 
