FIX: Position of goal marks

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ BODY
       <div id='golBlu1' class='cnt gol rnd txb'> C 19 </div>
     </div>
 
-    <div id='D00' class='cll flt cnt lgr brd nnns arg'>
+    <div id='D00' class='cll flt cnt lgr brd nnns arg exc4'>
       <div id='golGre2' class='cnt gol rnd txg'> D 00 </div>
     </div>
     <div id='D01' class='cll flt cnt dgr txg arg'> D 01 </div>
@@ -129,7 +129,7 @@ BODY
       <div id='golBlu2' class='cnt gol rnd txb'> D 19 </div>
     </div>
 
-    <div id='E00' class='cll flt cnt dgr brd nnns arg'>
+    <div id='E00' class='cll flt cnt dgr brd nnns arg exc4'>
       <div id='golGre3' class='cnt gol rnd txg'> E 00 </div>
     </div>
     <div id='E01' class='cll flt cnt lgr txg arg'> E 01 </div>
@@ -154,7 +154,7 @@ BODY
       <div id='golBlu3' class='cnt gol rnd txb'> E 19 </div>
     </div>
 
-    <div id='F00' class='cll flt cnt lgr brd nnns arg'>
+    <div id='F00' class='cll flt cnt lgr brd nnns arg exc4'>
       <div id='golGre4' class='cnt gol rnd txg'> F 00 </div>
     </div>
     <div id='F01' class='cll flt cnt dgr txg arg'> F 01 </div>
@@ -179,7 +179,7 @@ BODY
       <div id='golBlu4' class='cnt gol rnd txb'> F 19 </div>
     </div>
 
-    <div id='G00' class='cll flt cnt dgr brd nnns arg'>
+    <div id='G00' class='cll flt cnt dgr brd nnns arg exc4'>
       <div id='golGre5' class='cnt gol rnd txg'> G 00 </div>
     </div>
     <div id='G01' class='cll flt cnt lgr txg arg'> G 01 </div>
@@ -204,7 +204,7 @@ BODY
       <div id='golBlu5' class='cnt gol rnd txb'> G 19 </div>
     </div>
 
-    <div id='H00' class='cll flt cnt lgr brd nnns arg'>
+    <div id='H00' class='cll flt cnt lgr brd nnns arg exc4'>
       <div id='golGre6' class='cnt gol rnd txg'> H 00 </div>
     </div>
     <div id='H01' class='cll flt cnt dgr txg arg'> H 01 </div>
@@ -229,7 +229,7 @@ BODY
       <div id='golBlu6' class='cnt gol rnd txb'> H 19 </div>
     </div>
 
-    <div id='I00' class='cll flt cnt dgr brd nnns arg'>
+    <div id='I00' class='cll flt cnt dgr brd nnns arg exc4'>
       <div id='golGre7' class='cnt gol rnd txg'> I 00 </div>
     </div>
     <div id='I01' class='cll flt cnt lgr txg arg'> I 01 </div>
