FIX: Several minor ones

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ BODY
     <!--........................................................................
     BALL
     -->
-    <div id='ball' class='abs stn bal rnd ani1'></div>
+    <div id='ball' class='abs stn rnd ani1'></div>
 
     <!--........................................................................
     ATHLETES
