ENH: Ball, selection and center appearances

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
     <!--========================================================================
     -->
-    <div id="selection"></div>
+    <div id='selection' class='sqr rnd box abs'></div>
 
     <!--========================================================================
     -->
-    <div id="ball"></div>
+    <div id="ball" class="sqr rnd shi box abs"></div>
 
     <div id="trigger" class="cnt rnd shi sh0 box abs">
       <div class="cnt rnd shi sh1 box">
@@ -84,6 +84,8 @@
 
     <!--========================================================================
     -->
+    <div id="center" class="sqr rnd shi box abs"></div>
+
     <div class="cll sqr cnt flt brd box drd ssns">A 00</div>
     <div class="cll sqr cnt flt brd box lrd ssns">A 01</div>
     <div class="cll sqr cnt flt brd box drd ssns">A 02</div>
