ENH: further base building

--- a/index.html
+++ b/index.html
@@ -20,29 +20,29 @@
 
     <!--========================================================================
     -->
-    <div class="zon"></div>
-    <div class="zon"></div>
-    <div class="zon"></div>
-    <div class="zon"></div>
+    <div class="zon sqr abs box rn2"></div>
+    <div class="zon sqr abs box rn2"></div>
+    <div class="zon sqr abs box rn2"></div>
+    <div class="zon sqr abs box rn2"></div>
 
-    <div class="zon"></div>
-    <div class="zon"></div>
-    <div class="zon"></div>
-    <div class="zon"></div>
+    <div class="zon sqr abs box rn2"></div>
+    <div class="zon sqr abs box rn2"></div>
+    <div class="zon sqr abs box rn2"></div>
+    <div class="zon sqr abs box rn2"></div>
 
-    <div class="zon"></div>
-    <div class="zon"></div>
-    <div class="zon"></div>
-    <div class="zon"></div>
+    <div class="zon sqr abs box rn2"></div>
+    <div class="zon sqr abs box rn2"></div>
+    <div class="zon sqr abs box rn2"></div>
+    <div class="zon sqr abs box rn2"></div>
 
-    <div class="zon"></div>
-    <div class="zon"></div>
-    <div class="zon"></div>
-    <div class="zon"></div>
+    <div class="zon sqr abs box rn2"></div>
+    <div class="zon sqr abs box rn2"></div>
+    <div class="zon sqr abs box rn2"></div>
+    <div class="zon sqr abs box rn2"></div>
 
     <!--========================================================================
     -->
-    <div id='selection' class='sqr rn2 box abs'></div>
+    <div id="selection" class="sqr rn2 box abs"></div>
 
     <!--========================================================================
     -->
@@ -58,33 +58,189 @@
 
     <!--========================================================================
     -->
-    <div class="ath"></div>
-    <div class="ath"></div>
-    <div class="ath"></div>
-    <div class="ath"></div>
-    <div class="ath"></div>
+    <div class="ath sqr abs cnt">
+      <svg id="minT00" width="42px" height="42px">
+        <rect id="minT00" width="6" height="6" x="14" y="25"/>
+        <rect id="minT00" width="6" height="6" x="14" y="18"/>
+        <rect id="minT00" width="6" height="6" x="21" y="18"/>
+        <rect id="minT00" width="6" height="6" x="21" y="11"/>
+      </svg>
+    </div>
 
-    <div class="ath"></div>
-    <div class="ath"></div>
-    <div class="ath"></div>
-    <div class="ath"></div>
-    <div class="ath"></div>
+    <div class="ath sqr abs cnt">
+      <svg id="minT01" width="42px" height="42px">
+        <rect id="minT01" width="6" height="6" x="14" y="11"/>
+        <rect id="minT01" width="6" height="6" x="21" y="18"/>
+        <rect id="minT01" width="6" height="6" x="21" y="25"/>
+        <rect id="minT01" width="6" height="6" x="14" y="25"/>
+      </svg>
+    </div>
 
-    <div class="ath"></div>
-    <div class="ath"></div>
-    <div class="ath"></div>
-    <div class="ath"></div>
-    <div class="ath"></div>
+    <div class="ath sqr abs cnt">
+      <svg id="minT02" width="42px" height="42px">
+        <rect id="minT02" width="6" height="6" x="14" y="25"/>
+        <rect id="minT02" width="6" height="6" x="21" y="25"/>
+        <rect id="minT02" width="6" height="6" x="21" y="18"/>
+        <rect id="minT02" width="6" height="6" x="21" y="11"/>
+      </svg>
+    </div>
 
-    <div class="ath"></div>
-    <div class="ath"></div>
-    <div class="ath"></div>
-    <div class="ath"></div>
-    <div class="ath"></div>
+    <div class="ath sqr abs cnt">
+      <svg id="minT03" width="42px" height="42px">
+        <rect id="minT03" width="6" height="6" x="25" y="11"/>
+        <rect id="minT03" width="6" height="6" x="18" y="18"/>
+        <rect id="minT03" width="6" height="6" x="18" y="25"/>
+        <rect id="minT03" width="6" height="6" x="11" y="25"/>
+      </svg>
+    </div>
+
+    <div class="ath sqr abs cnt">
+      <svg id="minT04" width="42px" height="42px">
+        <rect id="minT04" width="6" height="6" x="21" y="11"/>
+        <rect id="minT04" width="6" height="6" x="21" y="18"/>
+        <rect id="minT04" width="6" height="6" x="21" y="25"/>
+        <rect id="minT04" width="6" height="6" x="14" y="18"/>
+      </svg>
+    </div>
+
+    <div class="ath sqr abs cnt">
+      <svg id="minT05" width="42px" height="42px">
+        <rect id="minT05" width="6" height="6" x="11" y="25"/>
+        <rect id="minT05" width="6" height="6" x="11" y="18"/>
+        <rect id="minT05" width="6" height="6" x="18" y="11"/>
+        <rect id="minT05" width="6" height="6" x="25" y="18"/>
+      </svg>
+    </div>
+
+    <div class="ath sqr abs cnt">
+      <svg id="minT06" width="42px" height="42px">
+        <rect id="minT06" width="6" height="6" x="11" y="11"/>
+        <rect id="minT06" width="6" height="6" x="18" y="25"/>
+        <rect id="minT06" width="6" height="6" x="25" y="18"/>
+        <rect id="minT06" width="6" height="6" x="18" y="18"/>
+      </svg>
+    </div>
+
+    <div class="ath sqr abs cnt">
+      <svg id="minT07" width="42px" height="42px">
+        <rect id="minT07" width="6" height="6" x="24" y="8"/>
+        <rect id="minT07" width="6" height="6" x="17" y="15"/>
+        <rect id="minT07" width="6" height="6" x="10" y="22"/>
+        <rect id="minT07" width="6" height="6" x="17" y="29"/>
+      </svg>
+    </div>
+
+    <div class="ath sqr abs cnt">
+      <svg id="minT08" width="42px" height="42px">
+        <rect id="minT08" width="6" height="6" x="14" y="28"/>
+        <rect id="minT08" width="6" height="6" x="21" y="7"/>
+        <rect id="minT08" width="6" height="6" x="21" y="14"/>
+        <rect id="minT08" width="6" height="6" x="14" y="21"/>
+      </svg>
+    </div>
+
+    <div class="ath sqr abs cnt">
+      <svg id="minT09" width="42px" height="42px">
+        <rect id="minT09" width="6" height="6" x="14" y="28"/>
+        <rect id="minT09" width="6" height="6" x="21" y="8"/>
+        <rect id="minT09" width="6" height="6" x="21" y="21"/>
+        <rect id="minT09" width="6" height="6" x="14" y="14"/>
+      </svg>
+    </div>
+
+    <div class="ath sqr abs cnt">
+      <svg id="minT10" width="42px" height="42px">
+        <rect id="minT10" width="6" height="6" x="21" y="8"/>
+        <rect id="minT10" width="6" height="6" x="14" y="28"/>
+        <rect id="minT10" width="6" height="6" x="14" y="21"/>
+        <rect id="minT10" width="6" height="6" x="14" y="14"/>
+      </svg>
+    </div>
+
+    <div class="ath sqr abs cnt">
+      <svg id="minT11" width="42px" height="42px">
+        <rect id="minT11" width="6" height="6" x="25" y="8"/>
+        <rect id="minT11" width="6" height="6" x="11" y="28"/>
+        <rect id="minT11" width="6" height="6" x="11" y="21"/>
+        <rect id="minT11" width="6" height="6" x="18" y="14"/>
+      </svg>
+    </div>
+
+    <div class="ath sqr abs cnt">
+      <svg id="minT12" width="42px" height="42px">
+        <rect id="minT12" width="6" height="6" x="25" y="8"/>
+        <rect id="minT12" width="6" height="6" x="18" y="15"/>
+        <rect id="minT12" width="6" height="6" x="18" y="22"/>
+        <rect id="minT12" width="6" height="6" x="11" y="29"/>
+      </svg>
+    </div>
+
+    <div class="ath sqr abs cnt">
+      <svg id="minT13" width="42px" height="42px">
+        <rect id="minT13" width="6" height="6" x="7" y="8"/>
+        <rect id="minT13" width="6" height="6" x="14" y="15"/>
+        <rect id="minT13" width="6" height="6" x="21" y="22"/>
+        <rect id="minT13" width="6" height="6" x="28" y="29"/>
+      </svg>
+    </div>
+
+    <div class="ath sqr abs cnt">
+      <svg id="minT14" width="42px" height="42px">
+        <rect id="minT14" width="6" height="6" x="21" y="28"/>
+        <rect id="minT14" width="6" height="6" x="21" y="7"/>
+        <rect id="minT14" width="6" height="6" x="21" y="14"/>
+        <rect id="minT14" width="6" height="6" x="14" y="21"/>
+      </svg>
+    </div>
+
+    <div class="ath sqr abs cnt">
+      <svg id="minT15" width="42px" height="42px">
+        <rect id="minT15" width="6" height="6" x="21" y="28"/>
+        <rect id="minT15" width="6" height="6" x="21" y="7"/>
+        <rect id="minT15" width="6" height="6" x="14" y="14"/>
+        <rect id="minT15" width="6" height="6" x="14" y="21"/>
+      </svg>
+    </div>
+
+    <div class="ath sqr abs cnt">
+      <svg id="minT16" width="42px" height="42px">
+        <rect id="minT16" width="6" height="6" x="18" y="28"/>
+        <rect id="minT16" width="6" height="6" x="18" y="7"/>
+        <rect id="minT16" width="6" height="6" x="18" y="14"/>
+        <rect id="minT16" width="6" height="6" x="18" y="21"/>
+      </svg>
+    </div>
+
+    <div class="ath sqr abs cnt">
+      <svg id="minT17" width="42px" height="42px">
+        <rect id="minT17" width="6" height="6" x="11" y="11"/>
+        <rect id="minT17" width="6" height="6" x="18" y="11"/>
+        <rect id="minT17" width="6" height="6" x="25" y="25"/>
+        <rect id="minT17" width="6" height="6" x="25" y="18"/>
+      </svg>
+    </div>
+
+    <div class="ath sqr abs cnt">
+      <svg id="minT18" width="42px" height="42px">
+        <rect id="minT18" width="6" height="6" x="14" y="14"/>
+        <rect id="minT18" width="6" height="6" x="21" y="14"/>
+        <rect id="minT18" width="6" height="6" x="14" y="21"/>
+        <rect id="minT18" width="6" height="6" x="21" y="21"/>
+      </svg>
+    </div>
+
+    <div class="ath sqr abs cnt">
+      <svg id="minT19" width="42px" height="42px">
+        <rect id="minT19" width="6" height="6" x="25" y="18"/>
+        <rect id="minT19" width="6" height="6" x="18" y="11"/>
+        <rect id="minT19" width="6" height="6" x="11" y="18"/>
+        <rect id="minT19" width="6" height="6" x="18" y="25"/>
+      </svg>
+    </div>
 
     <!--========================================================================
     -->
-    <div id="center" class="sqr rn2 bd2 box abs"></div>
+    <div id="center" class="rn2 bd2 box abs"></div>
 
     <div class="cll sqr cnt flt bd1 box fml drd ssns">A 00</div>
     <div class="cll sqr cnt flt bd1 box fml lrd ssns">A 01</div>
@@ -129,7 +285,7 @@
     <div class="cll sqr cnt flt bd1 box fml drd nsss">B 19</div>
 
     <div class="sqr cnt flt bd1 box dgr snns">
-      <div class="cll cnt gol bd2 rn2 box"fml >C 00</div>
+      <div class="cll cnt gol bd2 rn2 box fml" >C 00</div>
     </div>
     <div class="cll sqr cnt flt bd1 box fml lgr ssnn">C 01</div>
     <div class="cll sqr cnt flt bd1 box fml drd snss">C 02</div>
@@ -150,11 +306,11 @@
     <div class="cll sqr cnt flt bd1 box fml lrd sssn">C 17</div>
     <div class="cll sqr cnt flt bd1 box fml dbl snns">C 18</div>
     <div class="sqr cnt flt bd1 box lbl ssnn">
-      <div class="cll cnt gol bd2 rn2 box"fml >C 19</div>
+      <div class="cll cnt gol bd2 rn2 box fml" >C 19</div>
     </div>
 
     <div class="sqr cnt flt bd1 box lgr nnns">
-      <div class="cll cnt gol bd2 rn2 box"fml >D 00</div>
+      <div class="cll cnt gol bd2 rn2 box fml" >D 00</div>
     </div>
     <div class="cll sqr cnt flt bd1 box fml dgr nnnn">D 01</div>
     <div class="cll sqr cnt flt bd1 box fml lgr ssnn">D 02</div>
@@ -175,11 +331,11 @@
     <div class="cll sqr cnt flt bd1 box fml dbl snns">D 17</div>
     <div class="cll sqr cnt flt bd1 box fml lbl nnnn">D 18</div>
     <div class="sqr cnt flt bd1 box dbl nsnn">
-      <div class="cll cnt gol bd2 rn2 box"fml >D 19</div>
+      <div class="cll cnt gol bd2 rn2 box fml" >D 19</div>
     </div>
 
     <div class="sqr cnt flt bd1 box dgr nnns">
-      <div class="cll cnt gol bd2 rn2 box"fml >E 00</div>
+      <div class="cll cnt gol bd2 rn2 box fml" >E 00</div>
     </div>
     <div class="cll sqr cnt flt bd1 box fml lgr nnnn">E 01</div>
     <div class="cll sqr cnt flt bd1 box fml dgr nnnn">E 02</div>
@@ -200,11 +356,11 @@
     <div class="cll sqr cnt flt bd1 box fml lbl nnnn">E 17</div>
     <div class="cll sqr cnt flt bd1 box fml dbl nnnn">E 18</div>
     <div class="sqr cnt flt bd1 box lbl nsnn">
-      <div class="cll cnt gol bd2 rn2 box"fml >E 19</div>
+      <div class="cll cnt gol bd2 rn2 box fml" >E 19</div>
     </div>
 
     <div class="sqr cnt flt bd1 box lgr nnns">
-      <div class="cll cnt gol bd2 rn2 box"fml >F 00</div>
+      <div class="cll cnt gol bd2 rn2 box fml" >F 00</div>
     </div>
     <div class="cll sqr cnt flt bd1 box fml dgr nnnn">F 01</div>
     <div class="cll sqr cnt flt bd1 box fml lgr nnnn">F 02</div>
@@ -225,11 +381,11 @@
     <div class="cll sqr cnt flt bd1 box fml dbl nnnn">F 17</div>
     <div class="cll sqr cnt flt bd1 box fml lbl nnnn">F 18</div>
     <div class="sqr cnt flt bd1 box dbl nsnn">
-      <div class="cll cnt gol bd2 rn2 box"fml >F 19</div>
+      <div class="cll cnt gol bd2 rn2 box fml" >F 19</div>
     </div>
 
     <div class="sqr cnt flt bd1 box dgr nnns">
-      <div class="cll cnt gol bd2 rn2 box"fml >G 00</div>
+      <div class="cll cnt gol bd2 rn2 box fml" >G 00</div>
     </div>
     <div class="cll sqr cnt flt bd1 box fml lgr nnnn">G 01</div>
     <div class="cll sqr cnt flt bd1 box fml dgr nnnn">G 02</div>
@@ -250,11 +406,11 @@
     <div class="cll sqr cnt flt bd1 box fml lbl nnnn">G 17</div>
     <div class="cll sqr cnt flt bd1 box fml dbl nnnn">G 18</div>
     <div class="sqr cnt flt bd1 box lbl nsnn">
-      <div class="cll cnt gol bd2 rn2 box"fml >G 19</div>
+      <div class="cll cnt gol bd2 rn2 box fml" >G 19</div>
     </div>
 
     <div class="sqr cnt flt bd1 box lgr nnns">
-      <div class="cll cnt gol bd2 rn2 box"fml >H 00</div>
+      <div class="cll cnt gol bd2 rn2 box fml" >H 00</div>
     </div>
     <div class="cll sqr cnt flt bd1 box fml dgr nnnn">H 01</div>
     <div class="cll sqr cnt flt bd1 box fml lgr nnnn">H 02</div>
@@ -275,11 +431,11 @@
     <div class="cll sqr cnt flt bd1 box fml dbl nnnn">H 17</div>
     <div class="cll sqr cnt flt bd1 box fml lbl nnnn">H 18</div>
     <div class="sqr cnt flt bd1 box dbl nsnn">
-      <div class="cll cnt gol bd2 rn2 box"fml >H 19</div>
+      <div class="cll cnt gol bd2 rn2 box fml" >H 19</div>
     </div>
 
     <div class="sqr cnt flt bd1 box dgr nnns">
-      <div class="cll cnt gol bd2 rn2 box"fml >I 00</div>
+      <div class="cll cnt gol bd2 rn2 box fml" >I 00</div>
     </div>
     <div class="cll sqr cnt flt bd1 box fml lgr nnnn">I 01</div>
     <div class="cll sqr cnt flt bd1 box fml dgr nssn">I 02</div>
@@ -300,11 +456,11 @@
     <div class="cll sqr cnt flt bd1 box fml lbl nnss">I 17</div>
     <div class="cll sqr cnt flt bd1 box fml dbl nnnn">I 18</div>
     <div class="sqr cnt flt bd1 box lbl nsnn">
-      <div class="cll cnt gol bd2 rn2 box"fml >I 19</div>
+      <div class="cll cnt gol bd2 rn2 box fml" >I 19</div>
     </div>
 
     <div class="sqr cnt flt bd1 box lgr nnss">
-      <div class="cll cnt gol bd2 rn2 box"fml >J 00</div>
+      <div class="cll cnt gol bd2 rn2 box fml" >J 00</div>
     </div>
     <div class="cll sqr cnt flt bd1 box fml dgr nssn">J 01</div>
     <div class="cll sqr cnt flt bd1 box fml lrd snss">J 02</div>
@@ -325,7 +481,7 @@
     <div class="cll sqr cnt flt bd1 box fml drd sssn">J 17</div>
     <div class="cll sqr cnt flt bd1 box fml lbl nnss">J 18</div>
     <div class="sqr cnt flt bd1 box dbl nssn">
-      <div class="cll cnt gol bd2 rn2 box"fml >J 19</div>
+      <div class="cll cnt gol bd2 rn2 box fml" >J 19</div>
     </div>
 
     <div class="cll sqr cnt flt bd1 box fml drd ssns">K 00</div>
@@ -374,26 +530,26 @@
     -->
     <div class="spc flt"></div>
 
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
-    <div class="bnc sqr flt rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt bd2 box rn2"></div>
 
     <!--========================================================================
     -->
@@ -447,5 +603,17 @@
 
 </body>
 
-<script type="text/javascript" src="main.js"></script>
+<!--////////////////////////////////////////////////////////////////////////////
+-->
+<script> const o = {} </script>
+
 <script type="text/javascript" src="page.js"></script>
+<script type="text/javascript" src="state.js"></script>
+<script type="text/javascript" src="info.js"></script>
+
+<script type="text/javascript" src="tool.js"></script>
+<script type="text/javascript" src="update.js"></script>
+<script type="text/javascript" src="hover.js"></script>
+<script type="text/javascript" src="click.js"></script>
+<script type="text/javascript" src="press.js"></script>
+<script type="text/javascript" src="engine.js"></script>
